conjugation fixes reorganisation of code

--- a/documents/package.json
+++ b/documents/package.json
@@ -15,7 +15,7 @@
     "language",
     "learning"
   ],
-  "author": "Your Name",
+  "author": "GiantPanda87",
   "license": "MIT",
   "dependencies": {
     "live-server": "^1.2.1"
